/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package threadrelay;

/**
 *
 * @author ficarra.gabriele
 */
public class Gestore {

    private Atleta a1 = new Atleta();
    private Atleta a2 = new Atleta();
    private Atleta a3 = new Atleta();
    private Atleta a4 = new Atleta();
    
}
